--- a/modules/configurations/client/views/list-configurations.client.view.html
+++ b/modules/configurations/client/views/list-configurations.client.view.html
@@ -17,6 +17,6 @@
     </a>
   </div>
   <div class="alert alert-warning text-center" data-ng-if="vm.configurations.$resolved && !vm.configurations.length">
-    No Configurations yet, why don't you <a data-ui-sref="configurations.create">create one</a>?
+    No Configurations yet, why don't you <a data-ui-sref="configurations.create.basics">create one</a>?
   </div>
 </section>
