--- a/modules/characters/client/views/creationSteps/character.creation.basics.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.basics.view.html
@@ -31,6 +31,6 @@
 <div class="row">
   <div class="form-group col-md-10" show-errors>
       <label class="control-label" for="appearance">Character Appearance</label><br />
-    <textarea name="appearance" type="text" ng-model="vm.character.appearance" id="appearance" class="form-control" placeholder="Character Appearance"></textarea>
+    <textarea name="appearance" type="text" ng-model="vm.character.background.appearance" id="appearance" class="form-control" placeholder="Character Appearance"></textarea>
   </div>
 </div>
