--- a/modules/configurations/client/views/form-configuration.client.view.html
+++ b/modules/configurations/client/views/form-configuration.client.view.html
@@ -1,4 +1,7 @@
 <section>
+  <link rel="stylesheet" href="modules/configurations/client/css/configuration.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
   <div class="page-header">
     <h1>Manage Campaign Configuration</h1>
   </div>
@@ -6,13 +9,13 @@
     <nav class="col-sm-2 col-md-2">
       <ul class="nav nav-pills nav-stacked">
         <li ui-sref-active="inactive">
-          <a ui-sref="configurations.edit.basics">Basics</a>
+          <a ui-sref="{{vm.configuration._id ? 'configurations.edit.basics' : 'configurations.create.basics'}}">Basics</a>
         </li>
         <li ui-sref-active="inactive">
-          <a ui-sref="configurations.edit.races">Races</a>
+          <a ui-sref="{{vm.configuration._id ? 'configurations.edit.races' : 'configurations.create.races'}}">Races</a>
         </li>
         <li ui-sref-active="inactive">
-          <a ui-sref="configurations.edit.classes">Classes</a>
+          <a ui-sref="{{vm.configuration._id ? 'configurations.edit.classes' : 'configurations.create.classes'}}">Classes</a>
         </li>
       </ul>
     </nav>
@@ -20,7 +23,6 @@
       <div class="col-md-12">
       <form name="vm.form.configurationForm" class="form-horizontal" ng-submit="vm.save(vm.form.configurationForm.$valid)" novalidate>
         <fieldset>
-
           <div ui-view></div>
 
           <div class="form-group">
