Finalized Contract Creation Form and model

--- a/modules/characters/client/css/characterCreation.css
+++ b/modules/characters/client/css/characterCreation.css
@@ -1,8 +1,8 @@
-.att-entry {
+.att2-entry {
     width:100%;
     -webkit-appearance: none;
     margin: 0;
-    -moz-appearance:textfield;
+    -moz-appearance: textfield;
 }
 
 .col-centered {
