--- a/modules/configurations/client/views/form-configuration-races.client.view.html
+++ b/modules/configurations/client/views/form-configuration-races.client.view.html
@@ -1,6 +1,12 @@
 <div class="form-group" show-errors>
-  <h3>Available Races</h3>
-  <button type="button" ng-click="vm.addRace()" class="btn btn-default">Add Race</button>
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Available Races</h3>
+    </div>
+    <div class="col-md-offset-2 col-md-2">
+      <button type="button" ng-click="vm.addRace()" class="btn btn-default">Add Race</button>
+    </div>
+  </div>
   <hr style="padding-bottom: 0px; margin-bottom: 0px;"/>
   <div ng-repeat="c in vm.configuration.races"  ng-click="vm.toggleRaceVisibility($index)">
 
