--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -35,3 +35,10 @@ a:hover .header-profile-image {
 .has-error .help-inline.error-text {
   display: inline;
 }
+
+.att-entry {
+    width:100%;
+    -webkit-appearance: none;
+    margin: 0;
+    -moz-appearance: textfield;
+}
