--- a/modules/articles/client/views/create-article.client.view.html
+++ b/modules/articles/client/views/create-article.client.view.html
@@ -5,17 +5,39 @@
   <div class="col-md-12">
     <form name="articleForm" class="form-horizontal" ng-submit="create(articleForm.$valid)" novalidate>
       <fieldset>
-        <div class="form-group" show-errors>
-          <label for="title">Title</label>
-          <input name="title" type="text" ng-model="title" id="title" class="form-control" placeholder="Title" required>
-          <div ng-messages="articleForm.title.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Article title is required.</p>
+
+        <div class="row">
+          <div class="col-md-5">
+            <div class="form-group" show-errors>
+              <label for="title">Title</label>
+              <input name="title" type="text" ng-model="title" id="title" class="form-control" placeholder="Title" required>
+              <div ng-messages="articleForm.title.$error" role="alert">
+                <p class="help-block error-text" ng-message="required">Article title is required.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-offset-1 col-md-4">
+            <div class="form-group" show-errors>
+              <label for="author">Author</label>
+              <input name="author" type="text" ng-model="author" id="author" class="form-control" placeholder="Author" required>
+              <div ng-messages="articleForm.author.$error" role="alert">
+                <p class="help-block error-text" ng-message="required">Article author is required.</p>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="form-group">
-          <label for="content">Content</label>
-          <textarea name="content" ng-model="content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
+
+        <div class="row">
+          <div class="col-md-10">
+            <div class="form-group">
+              <label for="content">Content</label>
+              <textarea name="content" ng-model="content" id="content" class="form-control" cols="30" rows="20" placeholder="Content"></textarea>
+            </div>
+          </div>
         </div>
+
+
         <div class="form-group">
           <input type="submit" class="btn btn-default">
         </div>
