updated articles and contracts forms

--- a/modules/episodes/client/views/view-episode.client.view.html
+++ b/modules/episodes/client/views/view-episode.client.view.html
@@ -2,8 +2,7 @@
   <div class="page-header">
     <h1>Session on {{vm.episode.sessionDate | date: 'MM/dd/yy'}}</h1>
   </div>
-  <div class="pull-right"
-       data-ng-show="vm.episode.isCurrentUserOwner">
+  <div class="pull-right" ng-show="vm.authentication.user.roles.indexOf('admin') > -1">
     <a class="btn btn-primary"
        data-ui-sref="episodes.edit({ episodeId: vm.episode._id })">
       <i class="glyphicon glyphicon-edit"></i>
@@ -12,15 +11,5 @@
       <i class="glyphicon glyphicon-trash"></i>
     </a>
   </div>
-  <small>
-    <em class="text-muted">
-      Posted on
-      <span data-ng-bind="vm.episode.created | date:'mediumDate'"></span>
-      by
-      <span data-ng-if="vm.episode.user"
-            data-ng-bind="vm.episode.user.displayName"></span>
-      <span data-ng-if="!vm.episode.user">Deleted User</span>
-    </em>
-  </small>
   <p class="lead" data-ng-bind="vm.episode.content"></p>
 </section>
