--- a/modules/articles/client/views/view-article.client.view.html
+++ b/modules/articles/client/views/view-article.client.view.html
@@ -1,8 +1,14 @@
 <section ng-controller="ArticlesController" ng-init="findOne()">
   <div class="page-header">
     <h1 ng-bind="article.title"></h1>
+    <small>
+      <em class="text-muted">
+        Posted by
+        <span ng-bind="article.author"></span>
+      </em>
+    </small>
   </div>
-  <div class="pull-right" ng-show="authentication.user._id == article.user._id">
+  <div class="pull-right" ng-show="authentication.user.roles.indexOf('admin') > -1">
     <a class="btn btn-primary" ui-sref="articles.edit({articleId: article._id})">
       <i class="glyphicon glyphicon-edit"></i>
     </a>
@@ -10,13 +16,5 @@
       <i class="glyphicon glyphicon-trash"></i>
     </a>
   </div>
-  <small>
-    <em class="text-muted">
-      Posted on
-      <span ng-bind="article.created | date:'mediumDate'"></span>
-      by
-      <span ng-bind="article.user.displayName"></span>
-    </em>
-  </small>
-  <p class="lead" ng-bind="article.content"></p>
+  <p ng-bind="article.content"></p>
 </section>
