--- a/modules/contracts/client/views/list-contracts.client.view.html
+++ b/modules/contracts/client/views/list-contracts.client.view.html
@@ -4,7 +4,7 @@
   </div>
   <div class="list-group">
     <a data-ng-repeat="contract in vm.contracts"
-       data-ui-sref="contracts.view({ contractId: contract._id })"
+       data-ui-sref="contracts.edit({ contractId: contract._id })"
        class="list-group-item">
       <small class="list-group-item-text">
         Posted on
