--- a/modules/chat/client/views/chat.client.view.html
+++ b/modules/chat/client/views/chat.client.view.html
@@ -20,7 +20,7 @@
       <small class="pull-right text-muted" ng-bind="message.created | date:'mediumTime'"></small>
       <img ng-src="{{message.profileImageURL}}" alt="{{message.username}}" class="pull-left chat-profile-image" />
       <div class="pull-left chat-message-details">
-        <strong ng-bind="message.username"></strong>
+        <strong ng-bind="message.username"></strong><img ng-if="message.msgType === 'roll'" style="height:20px" alt="roll" src="modules/chat/client/img/die.png" />
         <br>
         <span ng-bind="message.text"></span>
       </div>
