--- a/modules/wikis/client/views/form-wiki.client.view.html
+++ b/modules/wikis/client/views/form-wiki.client.view.html
@@ -12,6 +12,9 @@
             <p class="help-block error-text" ng-message="required">Wiki name is required.</p>
           </div>
         </div>
+
+        <text-angular></text-angular>
+
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.wiki._id ? 'Update' : 'Create'}}</button>
         </div>
