--- a/modules/articles/client/views/list-articles.client.view.html
+++ b/modules/articles/client/views/list-articles.client.view.html
@@ -14,7 +14,12 @@
       <p class="list-group-item-text" ng-bind="article.content"></p>
     </a>
   </div>
-  <div class="alert alert-warning text-center" ng-if="articles.$resolved && !articles.length">
-    No articles yet, why don't you <a ui-sref="articles.create">create one</a>?
+  <div ng-if="articles.$resolved && !articles.length">
+    <div class="alert alert-warning text-center" ng-if="isAdmin()">
+      No news articles yet, why don't you <a ui-sref="articles.create">create one</a>?
+    </div>
+    <div ng-if="!isAdmin()">
+      No news articles are available at this time.
+    </div>
   </div>
 </section>
