--- a/modules/wikis/client/views/list-wikis.client.view.html
+++ b/modules/wikis/client/views/list-wikis.client.view.html
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Wikis</h1>
+    <h1>Tolmea Wiki</h1>
   </div>
   <div class="list-group">
     <a data-ng-repeat="wiki in vm.wikis"
@@ -16,7 +16,12 @@
       <h4 class="list-group-item-heading" data-ng-bind="wiki.name"></h4>
     </a>
   </div>
-  <div class="alert alert-warning text-center" data-ng-if="vm.wikis.$resolved && !vm.wikis.length">
-    No Wikis yet, why don't you <a data-ui-sref="wikis.create">create one</a>?
+  <div data-ng-if="vm.wikis.$resolved && !vm.wikis.length">
+    <div class="alert alert-warning text-center"  ng-if="vm.isAdmin()">
+      No Wiki pages yet, why don't you <a data-ui-sref="wikis.create">create one</a>?
+    </div>
+    <div ng-if="!vm.isAdmin()">
+      No wiki articles found.
+    </div>
   </div>
 </section>
