--- a/modules/episodes/client/views/view-episode.client.view.html
+++ b/modules/episodes/client/views/view-episode.client.view.html
@@ -11,6 +11,8 @@
       <i class="glyphicon glyphicon-trash"></i>
     </a>
   </div>
+
+  <!-- Player Signup -->
   <div class="form-group">
     <label class="control-label">Character Selection</label><br />
     <div class="row">
@@ -21,7 +23,9 @@
         </select>
       </div>
       <div class="col-md-3">
-        <button class="btn btn-default">I will attend</button>
+        <button class="btn btn-default" ng-click="vm.toggleAttendance()">
+          {{ vm.isUserPlaying() ? 'I will not attend' : 'I will attend' }}
+        </button>
       </div>
     </div>
   </div>
@@ -39,26 +43,5 @@
   <p>There are <b>{{vm.getRemainingSlots()}} player slots</b> available for this session.</p>
   <hr>
 
-  <h3>Contracts</h3>
-  <div ng-show="vm.episode.contracts.length > 0">
-    <div ng-repeat="contract in vm.formEnabledContracts" class="well sm-well">
-      <div class="row">
-        <h4 class="col-md-8" ng-bind="contract.name"></h4>
-      </div>
-      <p><i ng-bind="contract.details"></i></p>
-      <div class="row"><b>
-        <div class="col-sm-2">Reward</div>
-        <div class="col-sm-8">Condition</div></b>
-      </div>
-      <div ng-repeat="reward in contract.rewards" class="row">
-        <div class="col-sm-2">{{reward.amount}} {{reward.unit}}</div>
-        <div class="col-sm-8" ng-bind="reward.condition"></div>
-      </div>
-      <br>
-      There are a total of <b>{{contract.voters.length}} votes</b> for this contract.
-    </div>
-  </div>
-  <div ng-show="!vm.episode.contracts || vm.episode.contracts.length == 0">
-    Contracts have not been assigned for this episode.
-  </div>
+<div ng-include="'modules/episodes/client/views/view-episode.contracts.client.view.html'"></div>
 </section>
