--- a/modules/episodes/client/views/view-episode.contracts.client.view.html
+++ b/modules/episodes/client/views/view-episode.contracts.client.view.html
@@ -1,22 +1,26 @@
 <h3>Contracts</h3>
+<link rel="stylesheet" href="modules/episodes/client/css/contracts.css" />
+
 <div ng-show="vm.isUserPlaying() && vm.getPlayerVotedContract()">
   <p>You have voted for <b>"{{vm.getPlayerVotedContract().name}}</b>".</p>
 </div>
+
 <div ng-show="vm.episode.contracts.length > 0">
   <div ng-repeat="contract in vm.formEnabledContracts"
-        class="well sm-well"
+        class="well xs-well"
+        ng-class="vm.getPlayerVotedContract()._id === contract._id ? 'voted-contract' : 'regular-contract'"
         ng-click="vm.voteFor($index)">
-    <div class="row">
-      <h4 class="col-md-8" ng-bind="contract.name"></h4>
-    </div>
+
+    <div class="row"><h4 class="col-md-12" ng-bind="contract.name"></h4></div>
+    <div class="row"><p class="col-md-12"><b>Client:</b>  {{contract.client}}</p></div>
     <p><i ng-bind="contract.details"></i></p>
     <div class="row"><b>
-      <div class="col-sm-2">Reward</div>
-      <div class="col-sm-8">Condition</div></b>
+      <div class="col-sm-2 col-xs-5">Reward</div>
+      <div class="col-sm-10 col-xs-7">Condition</div></b>
     </div>
     <div ng-repeat="reward in contract.rewards" class="row">
-      <div class="col-sm-2">{{reward.amount}} {{reward.unit}}</div>
-      <div class="col-sm-8" ng-bind="reward.condition"></div>
+      <div class="col-sm-2 col-xs-5">{{reward.amount}} {{reward.unit}}</div>
+      <div class="col-sm-10 col-xs-7" ng-bind="reward.condition"></div>
     </div>
     <br>
     There are a total of <b>{{contract.voters.length}} votes</b> for this contract.
